# email-api

./: .dockerignore  Cargo.toml  aws.docker-compose.yml  docker-compose.yml
api/examples/create_mailbox/: main.rs
api/examples/mailbox/: main.rs
api/examples/mailboxes/: main.rs
api/src/: lib.rs
api/src/migadu/: client.rs  mod.rs
docker/api/: Dockerfile
docker/certs_kickstarter/: Dockerfile
docker/server/: Dockerfile
docker/server/nginx/: app.conf
examples/create_mailbox/: main.rs
examples/domain/: main.rs
examples/mailbox/: main.rs
examples/mailboxes/: main.rs
src/: client.rs  error.rs  lib.rs  main.rs
src/migadu/: client.rs  error.rs  mod.rs
