[package]
name = "email-api"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.4", features = ["json"] }
serde = "1.0.130"
serde_derive = "1.0.130"
thiserror = "1.0.29"
url = "2.2.2"

[dev-dependencies]
dotenv = "0.15.0"
tokio = { version = "1.12.0", features = ["full"] }
